[tool.poetry]
name = "greyhound-racing"
version = "0.1.0"
description = ""
authors = ["Marwin Steiner <marwin.steiner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"
scikit-learn = "^1.6.1"
xgboost = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
